# QAOA

./: README.md  main.py  pyproject.toml  qi.py  qi2.ipynb  quantum_inspire_testing.py  requirements.txt  testing.py
qaoa_lib/: error_mitigation.py  error_mitigation_lib.py  graphs.py  qaoa.py
qi_lib/: graphs.py  qaoa.py
test_results/1.LocalSimulator/: config_1.LocalSimulator.txt  final_results_1.LocalSimulator.txt
test_results/2.QIEmulator/: QICircuitCode.txt  config_2.QIEmulator.txt  final_results_2.QIEmulator.txt
test_results/4.IMBFezSimulator/: config_4.IMBFezSimulator.txt  final_results_4.IMBFezSimulator.txt
test_results/5.IBM/: IBMCircuitCode.txt  config_5.IBM.txt  final_results_5.IBM.txt
test_results/ExampleTest/: config_FirstTest.txt
test_results/QI_QX_20_2/: config_QI_QX_20_2.txt
test_results/QI_T5_20_2/: config_QI_T5_20_2.txt
test_results/QXEmulatorRep1/: config_QXEmulatorRep1.txt  final_results_QXEmulatorRep1.txt
test_results/QXEmulatorRep1ZNE/: config_QXEmulatorRep1ZNE.txt  final_results_QXEmulatorRep1ZNE.txt
test_results/QXEmulatorRep2/: config_QXEmulatorRep2.txt  final_results_QXEmulatorRep2.txt
test_results/QXEmulatorRep2ZNE/: config_QXEmulatorRep2ZNE.txt  final_results_QXEmulatorRep2ZNE.txt
